[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-api-mock"
version = "1.0.0"
description = "AI-powered API mock response generator."
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-api-mock = "ai_api_mock.main:cli"

[tool.setuptools.packages.find]
include = ["ai_api_mock*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
